<resources>
    <string name="app_name">Inventory App</string>
    <string name="title_home">Home</string>
    <string name="title_requests">Requests</string>
    <string name="title_account">Account</string>
    <string name="inventory_image">Inventory Image</string>
    <string name="qt_required">Qt. Required : 30</string>
    <string name="requested_item_name">Requested : Item Name</string>
    <string name="event_name">Event Name</string>
    <string name="create_request_content_desc">Create Request</string>
    <string name="search_hint">Search Inventory</string>
    <string name="inventory_name">Inventory Name</string>
    <string name="available_inventory">Available: 20</string>
    <string name="name">Name</string>
    <string name="profile_image">Profile Image</string>
    <string name="edit_profile_image_content_desc">Edit Profile Image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_profile_information">Update Profile Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="contact_no">Contact No</string>
    <string name="designation">Designation</string>
    <string name="update_profile">Update Profile</string>
    <string name="your_previous_requests">Your Previous Requests</string>
    <string name="my_requests">My Requests</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="about_app">About App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="your_username">Your Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="Submit_button">Submit</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signUp">Sign Up</string>
    <string name="forgot_password_heading">Forgot Password</string>
    <string name="enter_username">Enter Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="processing">Processing</string>
    <string name="are_you_admin_or_user">Are you Admin or User</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="register">Register</string>
    <string name="club_name">Club Name</string>
    <string name="request_registration">Request Registration</string>
    <string name="request_role">Role Request: </string>
    <string name="log_out">Log Out</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="remember_password">Remember Password?</string>
    <string name="login">Login</string>

    <string name="event_start_date">Starting Date</string>
    <string name="event_start_time">Starting Time</string>
    <string name="event_end_date">Ending Date</string>
    <string name="event_end_time">Ending Time</string>
    <string name="event_venue">Event Venue</string>
    <string name="add_new_request">Add New Request</string>
    <string name="inventory_details">Inventory Details</string>
    <string name="request_details">Request Details</string>
    <string name="select_start_date">Select Start Date</string>
</resources>