<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/requestsSingleRowCardItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imgRequests"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/inventory_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/txtRequestsClubName"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imgRequests"
            android:padding="2dp"
            android:text="@string/club_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtRequestsEventName"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtRequestsClubName"
            android:layout_toEndOf="@+id/imgRequests"
            android:padding="2dp"
            android:text="@string/event_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtRequestsItemName"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtRequestsEventName"
            android:layout_toEndOf="@+id/imgRequests"
            android:padding="2dp"
            android:text="@string/requested_item_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtRequestsItemQuantity"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtRequestsItemName"
            android:layout_toEndOf="@+id/imgRequests"
            android:padding="2dp"
            android:text="@string/qt_required"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
