<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/request_details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/design_default_color_primary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/request_details_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imgRequests"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/inventory_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/txtRequestsClubName"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imgRequests"
            android:padding="2dp"
            android:text="@string/club_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtRequestsEventName"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtRequestsClubName"
            android:layout_toEndOf="@+id/imgRequests"
            android:padding="2dp"
            android:text="@string/event_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtRequestsItemName"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtRequestsEventName"
            android:layout_toEndOf="@+id/imgRequests"
            android:padding="2dp"
            android:text="@string/requested_item_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtRequestsItemQuantity"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtRequestsItemName"
            android:layout_toEndOf="@+id/imgRequests"
            android:padding="2dp"
            android:text="@string/qt_required"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>