<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/design_default_color_primary">

    <RelativeLayout
        android:id="@+id/imgProfileLayout"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp">

        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            app:cardCornerRadius="250dp">

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:contentDescription="@string/profile_image"
                android:src="@drawable/default_profile_image" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnEditProfileImage"
            tools:targetApi="lollipop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/edit_profile_image_content_desc"
            android:src="@drawable/ic_baseline_edit_20"
            app:fabSize="mini" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txtProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:padding="8dp"
        android:text="@string/name"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgProfileLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>